# gsd-saas-creator

./: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  agents.md  install.sh
.claude/agents/: saas-devops.md  saas-engineer.md  saas-monitor.md  saas-pm.md  saas-qa.md  saas-swarm-coordinator.md
.claude/commands/: board-status.md  process-board.md  saas-create-from-board.md
.github/workflows/: mirror-to-org.yml  orchestrate.yml  saas-pipeline.yml  stage-trigger.yml
.wrangler/cache/: wrangler-account.json
agents/hitl-approver/: .env.example  README.md  package-lock.json  package.json
agents/hitl-approver/src/: agent.ts  index.ts  server.ts  state.ts  tools.ts
agents/pm-researcher/: Dockerfile  GEMINI.md  README.md  SPEC.md  pyproject.toml
agents/pm-researcher/app/: __init__.py  agent.py  config.py
agents/pm-researcher/deep_search/: agent.py  fast_api_app.py
agents/pm-researcher/deep_search/app_utils/: telemetry.py  typing.py
agents/pm-researcher/frontend/: package-lock.json  package.json
agents/pm-researcher/tests/integration/: test_agent.py  test_server_e2e.py
agents/qa-debugger/: GEMINI.md  README.md  SPEC.md  pyproject.toml
agents/qa-debugger/software_bug_assistant/: __init__.py  agent.py  fast_api_app.py  prompt.py
agents/qa-debugger/software_bug_assistant/app_utils/: telemetry.py  typing.py
agents/qa-debugger/software_bug_assistant/tools/: tools.py
agents/qa-debugger/tests/integration/: test_agent.py  test_server_e2e.py
agents/saas-pipeline/: .env.example  GEMINI.md  SPEC.md  pyproject.toml
agents/saas-pipeline/app/: agent.py  devops_agent.py  engineer_agent.py  monitor_agent.py  pm_agent.py  qa_agent.py  stitch_agent.py
agents/saas-pipeline/app/tools/: github_tools.py  pipeline_tools.py
agents/saas-pipeline/eval/: briefing_evalset.json
agents/saas-pipeline/tests/unit/: test_tools.py
design-extract-output/: CLAUDE.md.fragment  agents.md  kingdomofarcane-com-design-language.md  kingdomofarcane-com-design-tokens.json  kingdomofarcane-com-mcp.json  kingdomofarcane-com-preview.html  kingdomofarcane-com-shadcn-theme.css  kingdomofarcane-com-tailwind.config.js  kingdomofarcane-com-theme.js  kingdomofarcane-com-variables.css  kingdomofarcane-com-wordpress-theme.json
design-extract-output/.claude/skills/designlang/: SKILL.md
design-extract-output/.cursor/rules/: designlang.mdc
designs/: CLAUDE.md.fragment  agents.md  kingdomofarcane-com-design-language.md  kingdomofarcane-com-design-tokens.json  kingdomofarcane-com-figma-variables.json  kingdomofarcane-com-mcp.json
designs/.claude/skills/designlang/: SKILL.md
designs/.cursor/rules/: designlang.mdc
docs/: agent-workflow.md  improvements-visual.html
docs/superpowers/plans/: 2026-04-19-02-04-game-analogue-setup.md  2026-05-06-fix-output-layout.md
docs/superpowers/specs/: 2026-04-19-saas-pretty-projects-pipeline-design.md  2026-05-12-board-governance-automation-design.md
examples/: example-crm.md
output/arcane-ops/: DESIGN_neuform.md  brief.md  design.md  stitch-prompt.md
output/arcane-ops/design/: competitor-design-language.md
reference/: firebase_security_rules.txt  stitch_schema.json
scripts/: agent_workflow.py  board_ops.py  board_status.py  contract_drift_check.py  create_saas.py  deploy.py  dry_run_design_pipeline.py  extract_dna.py  generate_brief.py  generate_design_md.py  generate_stitch_design_md.py  generate_stitch_prompt.py  orchestrate.py  render_templates.py  ruflo_board_poller.py  scaffold.py
templates/: DESIGN.md.j2  REQUIREMENTS.md.j2  agent-contracts.json  brief-template.md  deploy.yml.j2  design-template.md  handoff-template.md  stitch-template.md
templates/github-actions/: stage-trigger.yml
webhook-receiver/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
webhook-receiver/src/: index.ts
workflows/: saas-create.md
